// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate aide-déclaration-indépendant: ACRE 1`] = `"[50000,3177,11383,101,14661,35339]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 2`] = `"[15000,949,3173,101,4223,10777]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 3`] = `"[5000,312,1279,101,1692,3308]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 4`] = `
"[10000,630,564,101,1295,8705]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: ACRE 5`] = `
"[10000,630,-1329,101,-598,10598]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: IJSS (indemnité sécurité sociale) 1`] = `"[50000,3024,11424,101,14549,35451]"`;

exports[`calculate aide-déclaration-indépendant: RSA 1`] = `"[500,25,82,101,208,292]"`;

exports[`calculate aide-déclaration-indépendant: RSA 2`] = `"[5000,312,1021,101,1434,3566]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 1`] = `"[50000,3175,17723,138,21036,28964]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 2`] = `"[50000,3175,16599,138,19912,30088]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 3`] = `"[50000,3175,14671,138,17984,32016]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 4`] = `"[50000,3176,17729,118,21023,28977]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 5`] = `"[50000,3175,16198,138,19511,30489]"`;

exports[`calculate aide-déclaration-indépendant: débit de tabac 1`] = `"[50000,3177,5672,101,8950,41050]"`;

exports[`calculate aide-déclaration-indépendant: international 1`] = `
"[50000,0,14610,101,14711,35289]
Notifications affichées : impôt . domiciliation étranger non implémentée"
`;

exports[`calculate aide-déclaration-indépendant: international 2`] = `"[50000,1267,11892,101,13260,36740]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 1`] = `"[50000,3176,11379,118,14673,35327]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 2`] = `"[5000,311,1278,118,1707,3293]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 3`] = `"[50000,3177,11383,101,14661,35339]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 4`] = `"[5000,312,1279,101,1692,3308]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 5`] = `
"[50000,3177,11383,101,14661,35339]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 6`] = `"[5000,312,1279,101,1692,3308]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 7`] = `
"[50000,3177,9471,101,12749,37251]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 1`] = `"[500,25,1026,101,1152,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 2`] = `"[1000,57,1026,101,1184,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 3`] = `"[1500,89,1045,101,1235,265]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 4`] = `"[2000,121,1076,101,1298,702]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 5`] = `"[5000,312,1279,101,1692,3308]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 6`] = `"[10000,630,2104,101,2835,7165]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 7`] = `
"[100000,6361,20835,101,27297,72703]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 8`] = `
"[1000000,63664,106148,101,169913,830087]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-artiste-auteur: bnc 1`] = `"[1230]"`;

exports[`calculate simulations-artiste-auteur: bnc 2`] = `"[1863]"`;

exports[`calculate simulations-artiste-auteur: bnc 3`] = `"[931]"`;

exports[`calculate simulations-artiste-auteur: salarié 1`] = `"[160]"`;

exports[`calculate simulations-artiste-auteur: salarié 2`] = `"[1603]"`;

exports[`calculate simulations-artiste-auteur: salarié 3`] = `"[12410]"`;

exports[`calculate simulations-auto-entrepreneur: ACRE 1`] = `
"[21394,116,1667,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 2`] = `
"[22152,179,1667,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 3`] = `
"[33228,269,2500,0,30000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 4`] = `
"[45267,439,3333,0,40000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: aides 1`] = `"[5742,62,417,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur: aides 2`] = `"[57415,618,4167,0,50000]"`;

exports[`calculate simulations-auto-entrepreneur: impôt sur le revenu 1`] = `"[32092,591,2083,706,24294]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 1`] = `"[574,6,42,0,500]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 2`] = `"[1148,12,83,0,1000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 3`] = `"[2297,25,167,0,2000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 4`] = `"[5742,62,417,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 5`] = `"[11483,124,833,0,10000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 6`] = `"[22966,247,1667,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 7`] = `"[57415,618,4167,0,50000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 8`] = `"[80381,865,5833,956,69044]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 9`] = `
"[114830,1236,8333,3297,96703]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 10`] = `
"[1148303,12359,83333,126543,873457]
Notifications affichées : dirigeant . auto-entrepreneur . contrôle seuil de CA dépassé, entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-indépendant: acre 1`] = `"[73025,23025,50000,51980,8213,41787,0,73025]"`;

exports[`calculate simulations-indépendant: activité 1`] = `"[26840,6840,20000,20726,601,19399,0,26840]"`;

exports[`calculate simulations-indépendant: activité 2`] = `"[29100,9100,20000,20787,603,19397,0,29100]"`;

exports[`calculate simulations-indépendant: cotisations minimales 1`] = `"[1368,1268,100,134,0,100,0,1368]"`;

exports[`calculate simulations-indépendant: cotisations minimales 2`] = `"[244,144,100,104,0,100,0,244]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 1`] = `"[29084,9084,20000,20787,603,19397,0,29084]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 2`] = `"[73025,23025,50000,51980,8213,41787,0,73025]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 3`] = `"[29084,9084,20000,20787,2079,17921,0,29084]"`;

exports[`calculate simulations-indépendant: inversions 1`] = `"[2000,1366,634,686,0,634,0,2000]"`;

exports[`calculate simulations-indépendant: inversions 2`] = `"[50000,16003,33998,35353,3500,30498,0,50000]"`;

exports[`calculate simulations-indépendant: inversions 3`] = `"[14460,4460,10000,10390,0,10000,0,14460]"`;

exports[`calculate simulations-indépendant: inversions 4`] = `"[68276,21576,46700,48551,6700,40000,0,68276]"`;

exports[`calculate simulations-indépendant: inversions 5`] = `"[14460,4460,10000,10390,0,10000,1000,15460]"`;

exports[`calculate simulations-indépendant: inversions 6`] = `"[19000,5870,13130,13643,0,13130,1000,20000]"`;

exports[`calculate simulations-indépendant: inversions 7`] = `"[17999,5557,12442,12928,0,12442,2000,20000]"`;

exports[`calculate simulations-indépendant: échelle de revenus 1`] = `"[1841,1341,500,547,0,500,0,1841]"`;

exports[`calculate simulations-indépendant: échelle de revenus 2`] = `"[2431,1431,1000,1063,0,1000,0,2431]"`;

exports[`calculate simulations-indépendant: échelle de revenus 3`] = `"[3025,1525,1500,1579,0,1500,0,3025]"`;

exports[`calculate simulations-indépendant: échelle de revenus 4`] = `"[3618,1618,2000,2095,0,2000,0,3618]"`;

exports[`calculate simulations-indépendant: échelle de revenus 5`] = `"[7302,2302,5000,5195,0,5000,0,7302]"`;

exports[`calculate simulations-indépendant: échelle de revenus 6`] = `"[14460,4460,10000,10390,0,10000,0,14460]"`;

exports[`calculate simulations-indépendant: échelle de revenus 7`] = `
"[139596,39596,100000,103788,24909,75091,0,139596]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-indépendant: échelle de revenus 8`] = `
"[1239955,239955,1000000,1033666,444476,555524,0,1239955]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-professions-libérales: CIPAV 1`] = `"[2759,0,2259,500,0,500]"`;

exports[`calculate simulations-professions-libérales: CIPAV 2`] = `"[3319,0,2319,1000,0,1000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 3`] = `"[3879,0,2379,1500,0,1500]"`;

exports[`calculate simulations-professions-libérales: CIPAV 4`] = `"[4440,0,2440,2000,0,2000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 5`] = `"[7872,0,2872,5000,0,5000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 6`] = `"[14129,0,4129,10000,0,10000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 7`] = `
"[144865,0,44865,100000,24943,75057]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-professions-libérales: CIPAV 8`] = `
"[1236512,0,236512,1000000,444436,555564]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 1`] = `"[30000,0,7751,22249,945,21304]"`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 2`] = `"[30000,0,8077,21923,932,20991]"`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 3`] = `"[300000,0,61784,238216,81297,156919]"`;

exports[`calculate simulations-professions-libérales: avocat 1`] = `
"[50000,0,11821,38179,4705,33474]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-professions-libérales: avocat 2`] = `
"[50000,0,11821,38179,4705,33474]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-professions-libérales: expert-comptable 1`] = `"[20000,0,5049,14951,0,14951]"`;

exports[`calculate simulations-professions-libérales: expert-comptable 2`] = `
"[50000,0,14877,35123,3611,31512]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-professions-libérales: médecin 1`] = `"[50000,0,14273,35727,3671,32056]"`;

exports[`calculate simulations-professions-libérales: médecin 2`] = `"[50000,0,20229,29771,2334,27437]"`;

exports[`calculate simulations-professions-libérales: médecin 3`] = `"[300000,0,86481,213519,73147,140372]"`;

exports[`calculate simulations-professions-libérales: médecin 4`] = `"[400000,0,106201,293800,115768,178032]"`;

exports[`calculate simulations-professions-libérales: médecin 5`] = `
"[120000,0,34704,85296,17710,67586]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-professions-libérales: sage-femme 1`] = `"[50000,0,12384,37617,4638,32979]"`;

exports[`calculate simulations-professions-libérales: sage-femme 2`] = `
"[20000,0,5148,14852,0,14852]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 3`] = `
"[4000,0,1271,2729,0,2729]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales: sage-femme 4`] = `
"[20000,0,5148,14852,0,14852]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 5`] = `
"[20000,0,5224,14775,0,14775]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 6`] = `
"[20000,0,5301,14698,0,14698]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 1`] = `
"[606,0,0,7198,4,13]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 2`] = `
"[1249,0,0,14573,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 3`] = `
"[1893,0,0,21947,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 1`] = `"[1391,0,0,16201,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 2`] = `"[1391,0,0,16201,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 3`] = `"[1391,0,0,16201,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 4`] = `"[917,0,0,10757,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 5`] = `
"[14490,0,0,154584,4,46]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 6`] = `"[917,0,0,10757,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 1`] = `"[917,0,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 2`] = `"[917,0,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 3`] = `"[917,0,0,10757,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 4`] = `"[917,0,0,10757,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 5`] = `"[917,0,0,10757,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 1`] = `"[442,0,0,5313,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 2`] = `"[917,0,0,10757,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 1`] = `"[0,0,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 2`] = `"[14,0,0,140,0,1]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 3`] = `"[62,0,0,323,0,2]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 4`] = `"[204,0,0,2591,2,5]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 5`] = `"[442,0,0,5313,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 6`] = `"[917,0,0,10757,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 7`] = `"[2341,0,0,27089,4,46]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 8`] = `
"[4758,0,0,52758,4,46]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 1`] = `
"[0,0,779,2046,2,0]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 2`] = `
"[0,0,1558,4093,3,8]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 3`] = `
"[0,0,2337,6139,4,12]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 1`] = `"[0,0,2070,8186,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 2`] = `"[0,0,2070,8186,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 3`] = `"[0,0,2070,8186,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 4`] = `"[0,0,1441,4298,4,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 5`] = `
"[0,0,21610,39357,4,56]
Notifications affichées : dirigeant . auto-entrepreneur . contrôle seuil de CA dépassé, entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 6`] = `"[0,0,1446,4195,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 1`] = `"[0,0,1298,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 2`] = `"[0,0,1297,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 3`] = `"[0,0,1445,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 4`] = `"[0,0,1451,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 5`] = `"[0,0,1451,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 1`] = `"[0,0,704,2456,3,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 2`] = `"[0,0,1290,7163,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 1`] = `"[0,0,7,6,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 2`] = `"[0,0,73,60,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 3`] = `"[0,0,145,119,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 4`] = `"[0,0,363,1023,1,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 5`] = `"[0,0,726,2046,2,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 6`] = `"[0,0,1451,4093,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 7`] = `"[0,0,3629,10232,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 8`] = `
"[0,0,7257,20465,4,40]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 1`] = `
"[0,8392,0,6102,4,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 2`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 3`] = `
"[0,22331,0,16308,4,32]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 1`] = `"[0,20621,0,15102,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 2`] = `"[0,20621,0,15102,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 3`] = `"[0,20621,0,15102,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 4`] = `"[0,13814,0,10116,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 5`] = `
"[0,226877,0,57936,4,56]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 6`] = `"[0,13814,0,10116,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 1`] = `"[0,14644,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 2`] = `"[0,14644,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 3`] = `"[0,13804,0,10108,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 4`] = `"[0,13814,0,10116,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 5`] = `"[0,13814,0,10116,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 1`] = `"[0,6894,0,5046,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 2`] = `"[0,13814,0,10116,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 1`] = `"[0,-1044,0,0,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 2`] = `"[0,-225,0,0,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 3`] = `"[0,634,0,483,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 4`] = `"[0,3160,0,2322,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 5`] = `"[0,6894,0,5046,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 6`] = `"[0,13814,0,10116,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 7`] = `"[0,33998,0,24913,4,48]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 8`] = `
"[0,69895,0,36431,4,56]
Notifications affichées : entreprise . seuil de franchise de TVA dépassé"
`;

exports[`calculate simulations-salarié: CCN HCR 1`] = `
"[3792,0,2500,1998,1887]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 1`] = `
"[4224,0,2500,1987,1878]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 2`] = `
"[4197,0,2500,1972,1864]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 3`] = `
"[4259,0,2500,1979,1867]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN compta 1`] = `
"[3724,0,2500,2006,1898]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN optique 1`] = `
"[3858,0,2500,2068,1953]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN spectacle vivant 1`] = `
"[4170,0,2500,1938,1856]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN sport 1`] = `
"[541,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: JEI 1`] = `"[3755,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: JEI 2`] = `
"[29252,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: JEI 3`] = `"[4976,0,4000,3141,2745]"`;

exports[`calculate simulations-salarié: activité partielle 1`] = `"[27,0,1560,1209,1209]"`;

exports[`calculate simulations-salarié: activité partielle 2`] = `"[427,0,4000,2594,2392]"`;

exports[`calculate simulations-salarié: activité partielle 3`] = `"[1429,0,8000,5209,4245]"`;

exports[`calculate simulations-salarié: activité partielle 4`] = `"[1194,0,4000,2704,2426]"`;

exports[`calculate simulations-salarié: activité partielle 5`] = `"[2849,0,4000,2870,2574]"`;

exports[`calculate simulations-salarié: activité partielle 6`] = `"[327,3750,3000,1940,1833]"`;

exports[`calculate simulations-salarié: activité partielle 7`] = `"[427,0,4000,2594,2485]"`;

exports[`calculate simulations-salarié: activité partielle 8`] = `"[397,0,2000,1555,1522]"`;

exports[`calculate simulations-salarié: activité partielle 9`] = `"[1299,0,2000,1555,1521]"`;

exports[`calculate simulations-salarié: activité partielle 10`] = `"[927,0,6000,4182,3498]"`;

exports[`calculate simulations-salarié: activité partielle 11`] = `"[2653,0,9000,6237,4945]"`;

exports[`calculate simulations-salarié: aides 1`] = `"[2481,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 2`] = `
"[13716,0,10000,8911,7620]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé, contrat salarié . régime des impatriés . information"
`;

exports[`calculate simulations-salarié: aides 3`] = `"[2228,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 4`] = `
"[2458,0,2000,1561,1527]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: aides 5`] = `"[2061,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides embauche covid 1`] = `
"[1348,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 2`] = `"[7672,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: aides embauche covid 3`] = `
"[1366,0,1500,1165,1165]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 4`] = `
"[996,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 1`] = `
"[1663,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 2`] = `
"[1496,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: assimilé salarié 1`] = `"[7610,0,5000,3943,3286]"`;

exports[`calculate simulations-salarié: assimilé salarié 2`] = `"[2241,0,1500,1163,1163]"`;

exports[`calculate simulations-salarié: assimilé salarié 3`] = `"[4550,0,3000,2348,2161]"`;

exports[`calculate simulations-salarié: atmp 1`] = `"[2700,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: avantages 1`] = `"[2847,0,2000,1540,1490]"`;

exports[`calculate simulations-salarié: avantages 2`] = `"[2857,0,2000,1539,1489]"`;

exports[`calculate simulations-salarié: avantages 3`] = `"[2760,0,2000,1549,1500]"`;

exports[`calculate simulations-salarié: cadre 1`] = `"[4443,0,3000,2348,2160]"`;

exports[`calculate simulations-salarié: cdd 1`] = `
"[2675,0,2000,1561,1528]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 2`] = `
"[2764,0,2000,1599,1551]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 3`] = `
"[3651,0,2400,1987,1906]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 4`] = `
"[4062,0,2400,1907,1828]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: contrat pro 1`] = `"[1014,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: contrat pro 2`] = `"[1681,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: effectif 1`] = `"[2645,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 2`] = `"[2691,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 3`] = `"[2705,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 4`] = `"[2705,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: frais pro - DFS 1`] = `"[2351,0,2000,1630,1630]"`;

exports[`calculate simulations-salarié: frais pro - DFS 2`] = `"[2469,0,2000,1584,1549]"`;

exports[`calculate simulations-salarié: frais pro - DFS 3`] = `"[2372,0,2000,1606,1558]"`;

exports[`calculate simulations-salarié: frais pro - DFS 4`] = `"[2350,0,2000,1612,1563]"`;

exports[`calculate simulations-salarié: frais pro - DFS 5`] = `"[2604,0,2000,1590,1590]"`;

exports[`calculate simulations-salarié: frais pro - DFS 6`] = `"[1885,0,1700,1363,1363]"`;

exports[`calculate simulations-salarié: frais pro - DFS 7`] = `"[3477,0,2600,2125,2092]"`;

exports[`calculate simulations-salarié: frais pro - IKV 1`] = `"[4710,0,3200,2530,2334]"`;

exports[`calculate simulations-salarié: frais pro - IKV 2`] = `"[4688,0,3200,2511,2314]"`;

exports[`calculate simulations-salarié: frais pro - IKV 3`] = `"[2951,0,2151,1681,1630]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 1`] = `"[2685,0,2000,1521,1487]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 2`] = `"[4634,0,3000,2134,1944]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 3`] = `"[2728,0,2000,1493,1458]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 1`] = `"[2760,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 2`] = `"[2714,0,2000,1606,1572]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 3`] = `"[2830,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 4`] = `
"[2740,0,2000,1627,1592]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 5`] = `
"[2702,0,2000,1601,1566]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 6`] = `
"[2702,0,2000,1601,1566]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 7`] = `
"[3577,2446,2000,1919,1886]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 8`] = `
"[3521,2286,2000,1889,1856]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 1`] = `"[4391,0,3000,2353,2330]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 2`] = `"[4391,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 3`] = `"[4391,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 4`] = `"[4391,0,3000,2353,1907]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 5`] = `"[4391,0,3000,2353,2217]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 6`] = `"[14023,0,9000,7156,6036]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 7`] = `"[14023,0,9000,7156,6327]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 8`] = `"[14023,0,9000,7156,6852]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 9`] = `"[4391,0,3000,2353,2170]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 10`] = `"[4391,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 1`] = `"[4391,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 2`] = `
"[45826,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 3`] = `
"[4426,0,3000,2353,2172]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 4`] = `"[4196,0,3000,2353,2252]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 5`] = `
"[45826,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 6`] = `"[4571,0,3000,2626,2485]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 7`] = `
"[45826,0,30000,26966,16655]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 8`] = `"[4391,0,3000,2353,2107]"`;

exports[`calculate simulations-salarié: inversions 1`] = `"[2000,0,1681,1309,1309]"`;

exports[`calculate simulations-salarié: inversions 2`] = `"[3729,0,2554,2000,1889]"`;

exports[`calculate simulations-salarié: inversions 3`] = `"[3949,0,2703,2117,2000]"`;

exports[`calculate simulations-salarié: lodeom 1`] = `
"[1706,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom 2`] = `"[2264,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom 3`] = `"[4196,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom 4`] = `"[6125,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom 5`] = `"[8545,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 1`] = `
"[1706,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 2`] = `"[2264,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 3`] = `"[3737,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 4`] = `"[6017,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 5`] = `"[8545,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 1`] = `
"[1706,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 2`] = `"[2264,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 3`] = `"[3542,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 4`] = `"[5337,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 5`] = `"[8545,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: stage 1`] = `
"[507,0,500,500,500]
Notifications affichées : contrat salarié . stage . avertissement, contrat salarié . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié: stage 2`] = `
"[2596,0,2000,1750,1750]
Notifications affichées : contrat salarié . stage . avertissement"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 1`] = `
"[1719,0,1521,1195,1195]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 2`] = `"[3670,0,2500,1979,1869]"`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 3`] = `
"[1706,0,1521,1170,1170]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 4`] = `"[3629,0,2500,1938,1830]"`;

exports[`calculate simulations-salarié: temps partiel 1`] = `"[2759,2188,2000,1561,1527]"`;

exports[`calculate simulations-salarié: temps partiel 2`] = `"[2693,2500,1857,1448,1428]"`;

exports[`calculate simulations-salarié: temps partiel 3`] = `
"[1210,1750,1000,770,770]
Notifications affichées : contrat salarié . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié: treizième mois 1`] = `"[3636,0,2300,1950,1842]"`;

exports[`calculate simulations-salarié: treizième mois 2`] = `"[4087,2965,2300,2186,2071]"`;

exports[`calculate simulations-salarié: treizième mois 3`] = `"[3251,0,2300,1799,1733]"`;

exports[`calculate simulations-salarié: échelle de salaires 1`] = `
"[130,0,100,57,57]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 2`] = `
"[284,0,250,176,176]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 3`] = `
"[541,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 4`] = `
"[814,0,750,572,572]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 5`] = `
"[1114,0,1000,770,770]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 6`] = `
"[1393,0,1250,968,968]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 7`] = `
"[1681,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 8`] = `"[2645,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: échelle de salaires 9`] = `"[3648,0,2500,1957,1848]"`;

exports[`calculate simulations-salarié: échelle de salaires 10`] = `"[4391,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: échelle de salaires 11`] = `"[6125,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: échelle de salaires 12`] = `"[7672,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: échelle de salaires 13`] = `
"[15588,0,10000,7958,5975]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 14`] = `
"[30975,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 15`] = `
"[142101,0,100000,87157,48426]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 16`] = `
"[1379925,0,1000000,896257,498390]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;
